[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/shine.png" type="Texture" id=1]
[ext_resource path="res://Shine.gd" type="Script" id=2]
[ext_resource path="res://art/SSBM Shine - Sound Effect.mp3" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 936.0

[node name="Shine" type="Area2D"]
script = ExtResource( 2 )

[node name="ShineSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ShineHitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimateTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="ShineSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Shine_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Shine_body_exited"]
